# ChangeLog for net-libs/libproxy
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-libs/libproxy/ChangeLog,v 1.24 2009/10/31 14:09:27 ranger Exp $

  31 Oct 2009; Brent Baude <ranger@gentoo.org> libproxy-0.2.3-r2.ebuild:
  Marking libproxy-0.2.3-r2 ppc64 for bug 289419

  23 Oct 2009; Jeroen Roovers <jer@gentoo.org> libproxy-0.2.3-r2.ebuild:
  Stable for HPPA (bug #289419).

  18 Oct 2009; Raúl Porcel <armin76@gentoo.org> libproxy-0.2.3-r2.ebuild:
  arm/ia64/sh/sparc stable

  02 Oct 2009; Mounir Lamouri <volkmar@gentoo.org> libproxy-0.2.3-r2.ebuild:
  Stable for ppc, bug 271865

  22 Sep 2009; Markus Meier <maekke@gentoo.org> libproxy-0.2.3-r2.ebuild:
  amd64 stable, bug #285370

  22 Sep 2009; Christian Faulhammer <fauli@gentoo.org>
  libproxy-0.2.3-r2.ebuild:
  stable x86, security bug 285370

  29 Jun 2009; Mart Raudsepp <leio@gentoo.org>
  -files/libproxy-0.2.3-fix-mozjs-cflags.patch:
  Remove now redundant previously used mozjs patch

*libproxy-0.2.3-r2 (29 Jun 2009)

  29 Jun 2009; Mart Raudsepp <leio@gentoo.org> -libproxy-0.2.3-r1.ebuild,
  +libproxy-0.2.3-r2.ebuild,
  +files/libproxy-0.2.3-fix-automagic-mozjs.patch:
  Fix automagic mozilla-js provider picking, so that with USE=xulrunner
  xulrunner-1.9 is always picked, and with USE="seamonkey -xulrunner"
  seamonkey-js is always picked. Depend on a xulrunner:1.9 that has its
  mozilla-js pkgconfig file usable for us while building to fix bug 275318
  once and for all

  25 Jun 2009; Romain Perier <mrpouet@gentoo.org>
  files/libproxy-0.2.3-fix-mozjs-cflags.patch:
  Fix bug #275318

  24 Jun 2009; <nirbheek@gentoo.org> libproxy-0.2.3-r1.ebuild:
  Re-add alpha stable, it was added as a mistake initially, but we're going
  to need stable soon anyway. Re-add to reduce arch workload. (yes, possibly
  bad, but blame armin76 if something breaks :p)

*libproxy-0.2.3-r1 (24 Jun 2009)

  24 Jun 2009; <nirbheek@gentoo.org> +libproxy-0.2.3-r1.ebuild,