@@ -9,7 +9,7 @@ AUX libproxy-0.2.3-fix-python-automagic.patch 858 RMD160 ec182cb70c84ffbf7faa8a1
 AUX libproxy-0.2.3-implicit-declaration.patch 206 RMD160 12d2d0507a2d0c163b7c2d16d7d42ab5d0d7eb8f SHA1 b17dabc232bf9140629a5d987279800b3d2d19d8 SHA256 1ff409011d9a826999dd1478632a5ac18f793bb3d0028e83f89f78463ee88bf5
 AUX libproxy-0.2.3-interix5.patch 2828 RMD160 2c68d43ddaab77e96a541a3217f3ca43bbe263cc SHA1 1e9360cec817985851249b2c25c93ad8533d7d73 SHA256 4a253a3ea354ec26181aabe973818df3520e1dd3fa5c129db4b0de6daf6110ae
 DIST libproxy-0.2.3.tar.gz 378773 RMD160 c86c4f8403cb879380e101d074af469c960b5c1c SHA1 2b2b00a179740548035a1145bbae600db9b0a2ce SHA256 59ded160b3547d29e37cc9d06359f7f37d94112214e4532430cd65e704c1339a
-EBUILD libproxy-0.2.3-r1.ebuild 2583 RMD160 62c0196c1b49f2b9f21c9cdecd5a6fc9b181bae4 SHA1 c881b6c94321d070698cef68610a48cecdc86a4f SHA256 2745c26c6547904a1f1391baf554d778e6937d1b1f9d0f95181eda49c8845a46
 EBUILD libproxy-0.2.3-r2.ebuild 3423 RMD160 cb2e6049ab5d8a209ee32567b7f3496f762055e8 SHA1 7537da1ff4d5fbe3a46bd8ba973ef438447c6825 SHA256 48feae47e635de2291613619c1f73fe443575a9f7a4231b1efc1f2277a5608dc
-MISC ChangeLog 4331 RMD160 47cc9946a645a8134b27d551cbe4eb397b0291ed SHA1 ed0bddfcb279219e87d1d35baed5c3aaf206777a SHA256 aead84529ef4d1d8109e1831ac6048bdf8c7e14dbe238b91da9913843de1327a
+EBUILD libproxy-0.2.3-r3.ebuild 3275 RMD160 ae259589ee4a366138f2c18e1e28c9373e256017 SHA1 aaebe6a4144b630eaf10299cd16d03e3c28eae87 SHA256 c70e2d435d1c2e8f8cd70df7d66ab38d2d98663d491496e3e677c68e7ed73215
+MISC ChangeLog 4506 RMD160 5373c5fd3fb5ec230c8217ab5e302c0775be3b43 SHA1 f89c4a57a334cf52c893f571e83d6f9bf4329fa0 SHA256 cb5e812cf20076c537947f16879b1e2c741f738bfdaf824d793f6940c53c41b9
 MISC metadata.xml 582 RMD160 333479b481893ba9bf6aff3d2b36e3ed676ab7e8 SHA1 0a267d1e753216b35fee81b47793be3e62d3dd75 SHA256 f71eab2416b0db74fbae2c452b485a8d5b19dd7a3e6638e29790c18a22049a26
