@@ -1,6 +1,11 @@
 # ChangeLog for net-libs/libproxy
-# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-libs/libproxy/ChangeLog,v 1.24 2009/10/31 14:09:27 ranger Exp $
+# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/net-libs/libproxy/ChangeLog,v 1.25 2010/03/05 09:33:57 pacho Exp $
+
+*libproxy-0.2.3-r3 (05 Mar 2010)
+
+  05 Mar 2010; Pacho Ramos <pacho@gentoo.org> +libproxy-0.2.3-r3.ebuild:
+  Drop seamonkey dependency due bug 300457 , thanks to Lars Wendler
 
   31 Oct 2009; Brent Baude <ranger@gentoo.org> libproxy-0.2.3-r2.ebuild:
   Marking libproxy-0.2.3-r2 ppc64 for bug 289419
